--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
