--- a/client/package.json
+++ b/client/package.json
@@ -16,10 +16,14 @@
     "@tanstack/react-query": "^5.90.9",
     "@tanstack/react-router": "^1.136.6",
     "axios": "^1.13.2",
+    "i18next": "^25.7.3",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0",
+    "react-i18next": "^16.5.0",
     "react-redux": "^9.2.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
