Optimize flight search: strictly prioritize exact matches and normalize location codes

--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^19.2.0",
     "react-datepicker": "^8.9.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-i18next": "^16.5.0",
     "react-redux": "^9.2.0",
     "swiper": "^12.0.3",
